--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black; font-family: arial;color: white;}
 
-
+h1{color:grey; font-family: verdana;}
+.maindiv{
+    background-color: white;
+    color: black;
+    width: 380px;
+    padding: 20px;
+    border-radius: 25px;
+    margin: auto;
+}
+input{
+    width: 120px;
+}
+label{
+    width: 100px;
+    display: inline-block;
+    margin-left: 40px;
+    margin-bottom: 10px;
+}
+button{
+    display: block;
+    margin-left: 40px;
+    margin-bottom: 10px;
+}
+p{
+    display: inline-block;
+    margin-top: 5px;
+    margin-left: 40px;
+    margin-bottom: 20px;
+}
